# drf-tutorial

./: README.md  pyproject.toml
.github/: run.sh
1-serialization/snippets/: serializers.py  urls.py  views.py
1-serialization/snippets/tests/: test_models.py  test_views.py
2-requests-and-responses/snippets/: serializers.py  urls.py  views.py
2-requests-and-responses/snippets/tests/: test_models.py  test_serializers.py  test_views.py
2-requests-and-responses/tutorial/: urls.py
3-class-based-views/snippets/: urls.py  views.py
3-class-based-views/snippets/migrations/: 0001_initial.py
3-class-based-views/snippets/tests/: test_views.py
3-class-based-views/tutorial/: settings.py
4-authentication-and-permissions/snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
4-authentication-and-permissions/snippets/tests/: test_serializers.py  test_views.py
5-relationships-and-hyperlinked-apis/snippets/: serializers.py  urls.py  views.py
5-relationships-and-hyperlinked-apis/snippets/migrations/: 0001_initial.py
5-relationships-and-hyperlinked-apis/snippets/tests/: test_views.py
5-relationships-and-hyperlinked-apis/tutorial/: settings.py
6-viewsets-and-routers/snippets/: views.py
6-viewsets-and-routers/snippets/tests/: test_models.py  test_serializers.py  test_views.py
6-viewsets-and-routers/tutorial/: urls.py
